<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="90dp"

                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/MakeImpact"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Me"
                    android:background="@null"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Other"
                    android:background="@null"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/Work"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="82dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tafs1"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/yellow"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="@string/tafs" />


                </LinearLayout>

            </HorizontalScrollView>


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/InPublic"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="82dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tafs2"

                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/yellow"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="@string/krank" />

                    <TextView
                        android:id="@+id/krank"

                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/yellow"
                        android:gravity="center"
                        android:text="@string/tafs"
                        android:onClick="onClick"/>




                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/HomeFriends"

                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="82dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tafs3"
                        android:layout_width="200px"
                        android:layout_height="200px"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/yellow"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="@string/tafs" />


                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>